# pre-commit-license

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_license/: __main__.py  constants.py  docstring_writer.py
tests/: test_pre_commit_license.py
