[tool.poetry]
name = "pre-commit-license"
version = "0.1.0"
description = "Pre-commit hook for adding license in Python projects."
authors = ["Mert Armagan Sari <mertarmagansari@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "pre_commit_license"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.coverage]
    [tool.coverage.run]
    omit = [
        '__init__.py',
        'tests/*',
        '*/tests/*',
    ]

    [tool.coverage.report]
    skip_empty = true
    fail_under = 90

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
